--- a/1ct.html
+++ b/1ct.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<Title> Cognizant Portal </Title>
+	<Title> My Portal </Title>
 	<style>
 		.wrapper{
 			/*background:#ffffff;*/
