--- a/1ct.html
+++ b/1ct.html
@@ -138,7 +138,7 @@
 		<div class="header">
 			<!-- <div class='emoji' style ="padding-left:20px; padding-top:15px;"> <div> -->
 			
-			<img src ="Images/emoji.jpg" style = "border-radius:8px;margin-left:50px; margin-top:15px;background-repeat: no-repeat;">
+			<img src ="Images/emoji.jpg" alt-text ="Emoji" style = "border-radius:8px;margin-left:50px; margin-top:15px;background-repeat: no-repeat;">
 			<a style = "color:white; font-size:30px; font-family:Arial;text-align:center; margin-left: 500px;"> One Cognizant </a>
 
 			<div class="searchbox" style = "height:25px;display:inline-block;margin-left: 100px;">
